@@ -1,5 +1,6 @@
 
 0.9.9c Oct 03, 2004
+ * merged Michel Hermier's ask_yes_no() patch to common.[ch] and transation.c
  * added init_pkg_action_args() and free_pkg_action_args()
  * merged Michel Hermier's main.c patch cleaning up main
  * added support for debian style "or" conditional in slack-required
